refactor: change function name

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h1>Jogo das Palavras</h1>
   </head>
   <main>
-    <div>
+    <div style="display: flex;">
       <img id="imgForca" src="img/Forca00.png"/>
-      <span id="spPalavraSecreta"></span>
+      <span id="spPalavraSecreta" style="display: flex;"></span>
     </div>
     <div>
       <span id="spLetrasJogadas"></span>
