--- a/index.html
+++ b/index.html
@@ -6,31 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jogo das Palavras</title>
-  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
-  <head>
-    <h1>Jogo das Palavras</h1>
-  </head>
   <main>
-    <div style="display: flex;">
-      <img id="imgForca" src="img/Forca00.png"/>
-      <span id="spPalavraSecreta" style="display: flex;"></span>
-    </div>
+    <h1>Jogo da Forca</h1>
     <div>
       <span id="spLetrasJogadas"></span>
     </div>
-    <div>
-      <input maxlength="1" id="ipPalavraResposta" />
+    <div class="container">
+      <img id="imgForca" src="img/Forca00.png" />
+      <span id="spPalavraSecreta"></span>
     </div>
+
     <div>
+      <input maxlength="1" id="ipPalavraResposta" placeholder="qual letra?" />
       <button id="btnNovaPalavra">Nova</button>
       <button id="btnVerificarPalavra">Verificar</button>
     </div>
   </main>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
