--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
       <span id="spPalavraSecreta"></span>
     </div>
 
-    <div>
+    <div style="margin-bottom: 30px;">
       <input maxlength="1" id="ipPalavraResposta" placeholder="qual letra?" />
       <button id="btnNovaPalavra">Nova</button>
       <button id="btnVerificarPalavra">Verificar</button>
     </div>
+    <p>Dica: animal</p>
   </main>
   <script src="js/script.js"></script>
 </body>
